[fix] Top margin on smaller screen size

--- a/css/style.css
+++ b/css/style.css
@@ -589,7 +589,7 @@ p {
   line-height: 45px;
   padding-bottom: 23px;
   padding-top: 16px;
-  margin-top: 10%;
+  margin-top: 6%;
 }
 
 .banner-txt p {
